--- a/public/project/medlea/index.html
+++ b/public/project/medlea/index.html
@@ -659,7 +659,7 @@ plant images. This repository contains 1099 leaf images of 31 species. There are
 <p>Figure 5: Few samples from the MedLEA images</p>
 <p>You can get access to the data set via the MedLEA package.</p>
 <pre tabindex="0"><code class="language-{r," data-lang="{r,">install.packages(&quot;MedLEA&quot;)
-</code></pre><h2 id="research-outputs">Research outputs</h2>
+</code></pre><h1 id="research-outputs">Research outputs</h1>
 <p><strong>Papers</strong></p>
 <p>Lakshika, J. P., &amp; Talagala, T. S. (2021). Computer-aided Interpretable Features for Leaf Image Classification. arXiv preprint arXiv:2106.08077.](<a href="https://arxiv.org/abs/2106.08077">https://arxiv.org/abs/2106.08077</a>)</p>
 <p><strong>Software</strong></p>
@@ -667,11 +667,13 @@ plant images. This repository contains 1099 leaf images of 31 species. There are
 https://CRAN.R-project.org/package=MedLEA</p>
 <p><a href="https://CRAN.R-project.org/package=MedLEA"><img src="http://www.r-pkg.org/badges/version/MedLEA" alt="CRAN\_Status\_Badge"></a>
 <a href="https://cran.r-project.org/package=MedLEA"><img src="http://cranlogs.r-pkg.org/badges/MedLEA" alt="Downloads"></a></p>
+<!-- raw HTML omitted -->
 <p><strong>Conference talks</strong></p>
 <p><a href="https://www.youtube.com/channel/UCqfu75XVtV4s-W5aiw1tavQ">Click here</a></p>
 <p><strong>Research reproducibility</strong></p>
 <p>R codes and data to reproduce the results in the paper &ldquo;Computer-aided Interpretable Features for Leaf Image Classification&rdquo; available at <a href="https://github.com/SMART-Research/leaffeatures_paper">https://github.com/SMART-Research/leaffeatures_paper</a></p>
 <p>This work is a part of <a href="https://www.linkedin.com/in/jayani-lakshika-9a0297162/">Jayani P G Lakshika</a> BSc (Hons) Degree in Statistics thesis - 2021, which was supervised by me.</p>
+<p><img src="octave.jpg" alt=""></p>
 
     </div>
 
