--- a/public/project/medlea/index.html
+++ b/public/project/medlea/index.html
@@ -661,10 +661,10 @@ plant images. This repository contains 1099 leaf images of 31 species. There are
 <pre tabindex="0"><code class="language-{r," data-lang="{r,">install.packages(&quot;MedLEA&quot;)
 </code></pre><h1 id="research-outputs">Research outputs</h1>
 <p><strong>Papers</strong></p>
-<p>Lakshika, J. P., &amp; Talagala, T. S. (2021). Computer-aided Interpretable Features for Leaf Image Classification. arXiv preprint arXiv:2106.08077.](<a href="https://arxiv.org/abs/2106.08077">https://arxiv.org/abs/2106.08077</a>)</p>
+<p><a href="https://arxiv.org/abs/2106.08077">Lakshika, J. P., &amp; Talagala, T. S. (2021). Computer-aided Interpretable Features for Leaf Image Classification. arXiv preprint arXiv:2106.08077.</a></p>
 <p><strong>Software</strong></p>
-<p>[Jayani P. G. Lakshika and Thiyanga S. Talagala (2021). MedLEA: Morphological and Structural Features of Medicinal Leaves. R package version 1.0.1.
-https://CRAN.R-project.org/package=MedLEA</p>
+<p>Jayani P. G. Lakshika and Thiyanga S. Talagala (2021). MedLEA: Morphological and Structural Features of Medicinal Leaves. R package version 1.0.1.
+<a href="https://CRAN.R-project.org/package=MedLEA">https://CRAN.R-project.org/package=MedLEA</a></p>
 <p><a href="https://CRAN.R-project.org/package=MedLEA"><img src="http://www.r-pkg.org/badges/version/MedLEA" alt="CRAN\_Status\_Badge"></a>
 <a href="https://cran.r-project.org/package=MedLEA"><img src="http://cranlogs.r-pkg.org/badges/MedLEA" alt="Downloads"></a></p>
 <!-- raw HTML omitted -->
