--- a/public/project/medlea/index.html
+++ b/public/project/medlea/index.html
@@ -673,7 +673,7 @@ plant images. This repository contains 1099 leaf images of 31 species. There are
 <p><strong>Research reproducibility</strong></p>
 <p>R codes and data to reproduce the results in the paper &ldquo;Computer-aided Interpretable Features for Leaf Image Classification&rdquo; available at <a href="https://github.com/SMART-Research/leaffeatures_paper">https://github.com/SMART-Research/leaffeatures_paper</a></p>
 <p>This work is a part of <a href="https://www.linkedin.com/in/jayani-lakshika-9a0297162/">Jayani P G Lakshika</a> BSc (Hons) Degree in Statistics thesis - 2021, which was supervised by me.</p>
-<p><img src="octave.jpg" alt=""></p>
+<p><img src="octave.jpeg" alt=""></p>
 
     </div>
 
