--- a/public/index.html
+++ b/public/index.html
@@ -1615,7 +1615,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/talk/whyr-talk/" >Forecasting Model Territories</a>
+      <a href="/talk/whyr-talk/" >Why R? 2021: Keynote</a>
     </h3>
 
     
