--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -564,7 +564,7 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/talk/whyr-talk/">Forecasting Model Territories</a>
+    <a href="/talk/whyr-talk/">Why R? 2021: Keynote</a>
   </h3>
 
   
