--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -551,11 +551,11 @@
 </ul>
 <p>MSc in Applied Statistics</p>
 <ul>
-<li>STA 517 3.0 Programming and Statistical Computing with R</li>
+<li><a href="https://hellor.netlify.app/mscschedule/">STA 517 3.0 Programming and Statistical Computing with R</a></li>
 </ul>
 <p>PG Certificate Course in Applied Statistics</p>
 <ul>
-<li>STA 506 2.0 Linear Regression Analysis</li>
+<li><a href="https://thiyangaregression.netlify.app/about/">STA 506 2.0 Linear Regression Analysis</a></li>
 </ul>
 <h1 id="2020">2020</h1>
 <h2 id="semester-2-1">Semester 2</h2>
