--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -592,6 +592,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/thiyangt/RMarkdown_RLadiesColombo" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
