--- a/public/talk/nigeria/index.html
+++ b/public/talk/nigeria/index.html
@@ -610,6 +610,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/thiyangt/RMarkdown_RLadiesColombo" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
