--- a/public/index.html
+++ b/public/index.html
@@ -2723,7 +2723,9 @@ Fit a simple linear regression model …
       
     </div>
     <div class="col-12 col-lg-8">
-      <h2 id="2021">2021</h2>
+      <h2 id="2022">2022</h2>
+<p><a href="https://r4fun.netlify.app/blog/">Data analysis with R: Institute of Applied Statistics, Sri Lanka (IASSL)</a></p>
+<h2 id="2021">2021</h2>
 <p><a href="https://r4fun.netlify.app/blog/">Data analysis with R: Sri Lanka Association for the Advancement of Science (SLAAS) - Section C</a></p>
 <p><a href="https://talks-thiyanga.netlify.app/6_thesiswriting/main.html#1">Thesis writing - MSc in Applied Statistics, USJ</a></p>
 <h2 id="2020">2020</h2>
