--- a/public/courses/statisticalconsultancy/index.html
+++ b/public/courses/statisticalconsultancy/index.html
@@ -572,6 +572,7 @@
 <p>Office hours: Tuesday 3:00pm – 4:00pm. Email me for other times.</p>
 <p>E-mail is the best way to get in contact with me—I will respond to all course-related e-mails within 24 hours.</p>
 <h1 id="tools-to-consultants">Tools: To consultants</h1>
+<p><a href="/CO/2021s2/STA474_2_statistical_consultancy_2021_2022.pdf">Course outline</a></p>
 <p><strong>1. Slides</strong></p>
 <p><a href="https://thiyangt.github.io/statconsultancy/#1">Click here</a></p>
 <p><strong>2. Gitrepo</strong></p>
