--- a/public/index.html
+++ b/public/index.html
@@ -2249,6 +2249,8 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
 
 
 
+  
+
 
 <div class="media stream-item">
   <div class="media-body">
@@ -2257,6 +2259,10 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
       <a href="/post/ggforce/" >Zoom Your Plots with ggforce</a>
     </h3>
 
+    
+    <div class="article-style">
+      You can use facet_zoom from the ggforce package to zoom out graphs instead of using your mouse (Contextual zoom).
+    </div>
     
 
     <div class="stream-meta article-metadata">
