--- a/public/index.html
+++ b/public/index.html
@@ -2305,7 +2305,7 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="/categories/r/">R</a>, <a href="/categories/tidyverse/">tidyverse</a>, <a href="/categories/ggplot2/">ggplot2</a>, <a href="/categories/scatterplot/">scatterplot</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="/categories/r/">R</a>, <a href="/categories/tidyverse/">tidyverse</a>, <a href="/categories/ggplot2/">ggplot2</a>, <a href="/categories/scatterplot/">scatterplot</a>, <a href="/categories/visdat/">visdat</a>, <a href="/categories/plotly/">plotly</a></span>
   
 
 </div>
