--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -520,23 +520,16 @@
 <h1 id="teaching-apps">Teaching Apps</h1>
 <p><a href="https://statisticsmart.shinyapps.io/SimpleLinearRegression/">Simple Linear Regression</a></p>
 <hr>
-<h1 id="2021">2021</h1>
+<h1 id="2022">2022</h1>
 <h2 id="semester-2">Semester 2</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
-<li>
-<p><a href="https://smart-doe.netlify.app/">STA 225 2.0 Design and Analysis of Experiments</a></p>
-</li>
 <li>
 <p><a href="https://stochasticprocesses.netlify.app/">STA 331 2.0 Stochastic Processes</a></p>
 </li>
 <li>
 <p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a> | <a href="https://thiyanga.netlify.app/courses/statisticalconsultancy/">Course information</a></p>
 </li>
-</ul>
-<p>MSc in Applied Statistics</p>
-<ul>
-<li>STA 529 2.0 Data Mining</li>
 </ul>
 <h2 id="semester-1">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
@@ -557,8 +550,45 @@
 <ul>
 <li><a href="https://thiyangaregression.netlify.app/about/">STA 506 2.0 Linear Regression Analysis</a></li>
 </ul>
-<h1 id="2020">2020</h1>
+<h1 id="2021">2021</h1>
 <h2 id="semester-2-1">Semester 2</h2>
+<p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
+<ul>
+<li>
+<p><a href="https://smart-doe.netlify.app/">STA 225 2.0 Design and Analysis of Experiments</a></p>
+</li>
+<li>
+<p><a href="https://stochasticprocesses.netlify.app/">STA 331 2.0 Stochastic Processes</a></p>
+</li>
+<li>
+<p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a> | <a href="https://thiyanga.netlify.app/courses/statisticalconsultancy/">Course information</a></p>
+</li>
+</ul>
+<p>MSc in Applied Statistics</p>
+<ul>
+<li>STA 529 2.0 Data Mining</li>
+</ul>
+<h2 id="semester-1-1">Semester 1</h2>
+<p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
+<p>BSc (Hon) Degree in Statistics/ Applied Sciences</p>
+<ul>
+<li>
+<p><a href="https://hellor.netlify.app/schedule/">STA 326 2.0 Programming and Data Analysis with R</a></p>
+</li>
+<li>
+<p><a href="https://tstdataviz.netlify.app/schedule/">ASP 460 2.0 Data Visualisation</a></p>
+</li>
+</ul>
+<p>MSc in Applied Statistics</p>
+<ul>
+<li><a href="https://hellor.netlify.app/mscschedule/">STA 517 3.0 Programming and Statistical Computing with R</a></li>
+</ul>
+<p>PG Certificate Course in Applied Statistics</p>
+<ul>
+<li><a href="https://thiyangaregression.netlify.app/about/">STA 506 2.0 Linear Regression Analysis</a></li>
+</ul>
+<h1 id="2020">2020</h1>
+<h2 id="semester-2-2">Semester 2</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
 <li>
@@ -578,7 +608,7 @@
 <ul>
 <li><a href="https://edify-thiyanga.netlify.app/ictc2020/">ICTC 3104.3 Data Analytics and Big Data: Introduction to R</a></li>
 </ul>
-<h2 id="semester-1-1">Semester 1</h2>
+<h2 id="semester-1-2">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
 <li>
@@ -607,7 +637,7 @@
 </li>
 </ul>
 <h1 id="2015">2015</h1>
-<h2 id="semester-2-2">Semester 2</h2>
+<h2 id="semester-2-3">Semester 2</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>
@@ -617,7 +647,7 @@
 <p><a href="/CO/2015s2/STA22420_2015_s2.pdf">STA 224 2.0 Regression Analysis</a></p>
 </li>
 </ul>
-<h2 id="semester-1-2">Semester 1</h2>
+<h2 id="semester-1-3">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>
@@ -628,7 +658,7 @@
 </li>
 </ul>
 <h1 id="2014">2014</h1>
-<h2 id="semester-2-3">Semester 2</h2>
+<h2 id="semester-2-4">Semester 2</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>
@@ -642,7 +672,7 @@
 <ul>
 <li><a href="/CO/2014s2/PBTMBL_2014_s2.pdf">PBT/ PBL/ MBL 387 2.0 Biostatistics and Computer Applications</a></li>
 </ul>
-<h2 id="semester-1-3">Semester 1</h2>
+<h2 id="semester-1-4">Semester 1</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>
@@ -656,7 +686,7 @@
 </li>
 </ul>
 <h1 id="2013">2013</h1>
-<h2 id="semester-2-4">Semester 2</h2>
+<h2 id="semester-2-5">Semester 2</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>STA 215 1.5 Data Analysis II</li>
@@ -678,7 +708,7 @@
 <ul>
 <li><a href="/CO/2013s2/BPharmBioStatistics_2013_s2.pdf">Biostatistics</a></li>
 </ul>
-<h2 id="semester-1-4">Semester 1</h2>
+<h2 id="semester-1-5">Semester 1</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li><a href="/CO/2013s1/STA1123.0.pdf">STA 112 3.0 Probability and Distribution Theory</a></li>
@@ -698,7 +728,7 @@
 </ul>
 <p>Department of Medical Laboratory Science, Faculty of Medical Sciences, USJ</p>
 <h1 id="2012">2012</h1>
-<h2 id="semester-2-5">Semester 2</h2>
+<h2 id="semester-2-6">Semester 2</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>STA 308 1.0 Medical Statistics</li>
@@ -716,7 +746,7 @@
 <ul>
 <li><a href="/CO/2012s2/MLS.pdf">Biostatistics-Teaching Associate</a></li>
 </ul>
-<h2 id="semester-1-5">Semester 1</h2>
+<h2 id="semester-1-6">Semester 1</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>STA 112 3.0 Probability and Distribution Theory (Temporary Instructor equivalent to Teaching Associate)</li>
