Updated with the blogpost

--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -546,10 +546,8 @@
 <ul>
 <li><a href="https://hellor.netlify.app/mscschedule/">STA 517 3.0 Programming and Statistical Computing with R</a></li>
 </ul>
-<p>PG Certificate Course in Applied Statistics</p>
-<ul>
-<li><a href="https://thiyangaregression.netlify.app/about/">STA 506 2.0 Linear Regression Analysis</a></li>
-</ul>
+<p>MSc in Data Science and AI</p>
+<p>Spatio-temporal Data Analysis</p>
 <h1 id="2021">2021</h1>
 <h2 id="semester-2-1">Semester 2</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
