--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -531,6 +531,20 @@
 <p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a> | <a href="https://thiyanga.netlify.app/courses/statisticalconsultancy/">Course information</a></p>
 </li>
 </ul>
+<p>MSc in Applied Statistics</p>
+<ul>
+<li><a href="https://hellor.netlify.app/mscschedule/">STA 517 3.0 Programming and Statistical Computing with R</a> - Batch 3</li>
+</ul>
+<p>MSc in Data Science and Artificial Intelligence</p>
+<p>The MSc in DS and AI at USJ was designed in partnership with the <a href="https://dsai-project.eu/site/">Erasmus+ DS and AI consortium</a>, a group of 15 European and Asian organizations with the mission of bringing European-standard advanced education to Asia</p>
+<ul>
+<li>
+<p><a href="https://thiyanga-spatiotemporal.netlify.app/">DSA 554 3.0 Spatio-temporal Data Analysis</a></p>
+</li>
+<li>
+<p>DSA 557 1.0 Scientific Writing and Communication</p>
+</li>
+</ul>
 <h2 id="semester-1">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <p>BSc (Hon) Degree in Statistics/ Applied Sciences</p>
@@ -542,12 +556,14 @@
 <p><a href="https://tstdataviz.netlify.app/schedule/">ASP 460 2.0 Data Visualisation</a></p>
 </li>
 </ul>
+<p>Department of Physics: BSc. General Degree - Electronics and Embedded Systems</p>
+<ul>
+<li><a href="https://edify-thiyanga.netlify.app/ees211/">EES 211 2.0 Data Analysis and Modeling</a></li>
+</ul>
 <p>MSc in Applied Statistics</p>
 <ul>
-<li><a href="https://hellor.netlify.app/mscschedule/">STA 517 3.0 Programming and Statistical Computing with R</a></li>
+<li><a href="https://thiyanga-datamining.netlify.app/">STA 529 2.0 Data Mining</a></li>
 </ul>
-<p>MSc in Data Science and AI</p>
-<p>Spatio-temporal Data Analysis</p>
 <h1 id="2021">2021</h1>
 <h2 id="semester-2-1">Semester 2</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
@@ -562,10 +578,6 @@
 <p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a> | <a href="https://thiyanga.netlify.app/courses/statisticalconsultancy/">Course information</a></p>
 </li>
 </ul>
-<p>MSc in Applied Statistics</p>
-<ul>
-<li>STA 529 2.0 Data Mining</li>
-</ul>
 <h2 id="semester-1-1">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <p>BSc (Hon) Degree in Statistics/ Applied Sciences</p>
@@ -579,11 +591,11 @@
 </ul>
 <p>MSc in Applied Statistics</p>
 <ul>
-<li><a href="https://hellor.netlify.app/mscschedule/">STA 517 3.0 Programming and Statistical Computing with R</a></li>
+<li><a href="https://hellor.netlify.app/mscschedule/">STA 517 3.0 Programming and Statistical Computing with R</a> - Batch 2</li>
 </ul>
 <p>PG Certificate Course in Applied Statistics</p>
 <ul>
-<li><a href="https://thiyangaregression.netlify.app/about/">STA 506 2.0 Linear Regression Analysis</a></li>
+<li><a href="https://thiyangaregression.netlify.app/about/">STA 506 2.0 Linear Regression Analysis</a> - Batch 2</li>
 </ul>
 <h1 id="2020">2020</h1>
 <h2 id="semester-2-2">Semester 2</h2>
@@ -599,7 +611,7 @@
 <p><a href="https://thiyanga.netlify.app/courses/regression2020/">STA 506 2.0 Linear Regression Analysis</a></p>
 </li>
 <li>
-<p><a href="https://thiyanga.netlify.app/courses/rmsc2020/">STA 517 3.0 Programming and Statistical Computing with R</a></p>
+<p><a href="https://thiyanga.netlify.app/courses/rmsc2020/">STA 517 3.0 Programming and Statistical Computing with R</a>  - Batch 1</p>
 </li>
 </ul>
 <p>Department of Information and Communication Technology (BSc (Hons) IT Degree)</p>
