--- a/public/team/index.html
+++ b/public/team/index.html
@@ -122,7 +122,7 @@
   
   <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/team/">
-  <meta property="og:title" content="Research Team | THIYANGA TALAGALA">
+  <meta property="og:title" content="Students | THIYANGA TALAGALA">
   <meta property="og:description" content="PhD in Statistics"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -143,7 +143,7 @@
 
 
 
-  <title>Research Team | THIYANGA TALAGALA</title>
+  <title>Students | THIYANGA TALAGALA</title>
 
 </head>
 
@@ -534,7 +534,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Research Team</h1>
+  <h1>Students</h1>
 
   
 
