working on students section

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -547,7 +547,7 @@
   
   <div class="article-style"><h1 id="current-research-students">Current research students</h1>
 <p><a href="https://www.linkedin.com/in/udeshi-salgado/?originalSubdomain=lk">Udeshi Salgado</a></p>
-<p><img src="/img/udeshi.jpeg" alt=""></p>
+<p><img src="udeshi.jpeg" alt=""></p>
 <p><strong>Thesis title:</strong> Deep learning for dental caries detection</p>
 <p><strong>Degree:</strong> BSc (Hons) Statistics - Reading</p>
 <p><a href="https://www.linkedin.com/in/lakna-perera/?trk=public_profile_browsemap&amp;originalSubdomain=lk">Lakna Perera</a></p>
