--- a/public/team/index.html
+++ b/public/team/index.html
@@ -539,44 +539,66 @@
 <div class="universal-wrapper">
   
   <div class="article-style"><h1 id="current-research-students">Current research students</h1>
-<p><a href="https://www.linkedin.com/in/udeshi-salgado/?originalSubdomain=lk">Udeshi Salgado</a></p>
-<p><img src="udeshi.jpeg" alt=""></p>
-<p><strong>Thesis title:</strong> Deep learning for dental caries detection</p>
-<p><strong>Degree:</strong> BSc (Hons) Statistics - Reading</p>
-<p><a href="https://www.linkedin.com/in/lakna-perera/?trk=public_profile_browsemap&amp;originalSubdomain=lk">Lakna Perera</a></p>
-<p><img src="lakna.jpeg" alt=""></p>
-<p><strong>Thesis title:</strong> Spatio-temporal forecasting of rainfall in Sri Lanka</p>
-<p><strong>Degree:</strong> BSc (Hons) Statistics - Reading</p>
+<table>
+<thead>
+<tr>
+<th style="text-align:center"></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center"><a href="https://www.linkedin.com/in/udeshi-salgado/?originalSubdomain=lk">Udeshi Salgado</a>  <img src="udeshi.jpeg" alt=""></td>
+<td style="text-align:left"><strong>Thesis title:</strong> Deep learning for dental caries detection <strong>Degree:</strong> BSc (Hons) Statistics - Reading</td>
+</tr>
+<tr>
+<td style="text-align:center"><a href="https://www.linkedin.com/in/lakna-perera/?trk=public_profile_browsemap&amp;originalSubdomain=lk">Lakna Perera</a>  <img src="lakna.jpeg" alt=""></td>
+<td style="text-align:left"><strong>Thesis title:</strong> Spatio-temporal forecasting of rainfall in Sri Lanka  <strong>Degree:</strong> BSc (Hons) Statistics - Reading</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
 <h1 id="former-research-students">Former research students</h1>
-<p><a href="https://janithwanni.netlify.app/"> Janith Wanniarachchi</a></p>
-<p><img src="janith.jpg" alt=""></p>
-<p><strong>Thesis title:</strong> Transparency, auditability and explainability of interpretable machine learning methods</p>
-<p><strong>Degree:</strong> BSc (Hons) Statistics - 2022</p>
-<p><strong>Current position:</strong> R Shiny Developer at <a href="https://appsilon.com/">Appsilon</a></p>
-<p><strong>Awards</strong></p>
-<p>SLAAS Physical Science Award Winner - 2022</p>
-<p><a href="https://jayanilakshika.netlify.app/"> Jayani Lakshika</a></p>
-<p><img src="jayani.png" alt=""></p>
-<p><strong>Thesis title:</strong> Computer vision system for
-automatic Sri Lankan medicinal
-plant identification</p>
-<p><strong>Degree:</strong> BSc (Hons) Statistics - 2021</p>
-<p><strong>Current position:</strong> PhD Candidate, Monash University, AUstralia</p>
-<p><strong>Awards</strong></p>
-<p>Fully funded Monash University PhD Scholarship</p>
-<p><a href="https://darecentre.org.au/portfolio_page/samudra-madushani/">Samudra Madhushani</a></p>
-<p><img src="samudra.png" alt=""></p>
-<p><strong>Thesis title:</strong></p>
-<p><strong>Degree:</strong> MSc in Applied Mathematics - 2021</p>
-<p><strong>Current position:</strong> PhD Candidate, University of New South Wales, AUstralia</p>
-<p><strong>Awards</strong></p>
-<p>Fully funded PhD Scholarship from <a href="https://darecentre.org.au/">DARE</a> and NSW</p>
+<table>
+<thead>
+<tr>
+<th style="text-align:center"></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center"><a href="https://janithwanni.netlify.app/"> Janith Wanniarachchi</a> <img src="janith.jpg" alt=""></td>
+<td style="text-align:left"><strong>Thesis title:</strong> Transparency, auditability and explainability of interpretable machine learning methods <strong>Degree:</strong> BSc (Hons) Statistics - 2022 <strong>Current position:</strong> R Shiny Developer at <a href="https://appsilon.com/">Appsilon</a> <strong>Awards:</strong> SLAAS Physical Science Award Winner - 2022</td>
+</tr>
+<tr>
+<td style="text-align:center"><a href="https://jayanilakshika.netlify.app/"> Jayani Lakshika</a> <img src="jayani.png" alt=""></td>
+<td style="text-align:left"><strong>Thesis title:</strong> Computer vision system for automatic Sri Lankan medicinal plant identification <strong>Degree:</strong> BSc (Hons) Statistics - 2021 <strong>Current position:</strong> PhD Candidate, Monash University, Australia <strong>Awards</strong> Fully funded Monash University PhD Scholarship</td>
+</tr>
+<tr>
+<td style="text-align:center"><a href="https://darecentre.org.au/portfolio_page/samudra-madushani/">Samudra Madhushani</a><img src="samudra.png" alt=""></td>
+<td style="text-align:left"><strong>Thesis title:</strong>  <a href="https://samudramadushani.github.io/HierarchicalForecasting/SlidesCodingR.html#1">Hierarchical Forecasting of Dengue Incidence in Sri Lanka</a> <strong>Degree:</strong> MSc in Applied Mathematics - 2021 <strong>Current position:</strong> PhD Candidate, University of New South Wales, AUstralia **Awards:**Fully funded PhD Scholarship from <a href="https://darecentre.org.au/">DARE</a> and NSW</td>
+</tr>
+</tbody>
+</table>
 <h1 id="industrial-training-supervision">Industrial Training Supervision</h1>
-<p><a href="https://www.linkedin.com/in/randi-shashikala-b885351b8/">Randi Shashikala</a></p>
-<p><img src="randi.jpg" alt=""></p>
-<p><strong>Research project:</strong> <a href="https://thiyangt.github.io/coviddashboard/">Interactive Dashboard to Monitor the COVID-19 Outbreak and Vaccine Administration</a></p>
-<p><strong>Degree:</strong> BSc (Hons) Statistics - 2022</p>
-<p><strong>Current Position:</strong> Analyst, Actuarial and Analytics Team, Fairfirst Insurance</p>
+<table>
+<thead>
+<tr>
+<th style="text-align:center"></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center"><a href="https://www.linkedin.com/in/randi-shashikala-b885351b8/">Randi Shashikala</a> <img src="randi.jpg" alt=""></td>
+<td style="text-align:left"><strong>Research project:</strong> <a href="https://thiyangt.github.io/coviddashboard/">Interactive Dashboard to Monitor the COVID-19 Outbreak and Vaccine Administration</a> <strong>Degree:</strong> BSc (Hons) Statistics - 2022 <strong>Current Position:</strong> Analyst, Actuarial and Analytics Team, Fairfirst Insurance</td>
+</tr>
+</tbody>
+</table>
 </div>
   
   <ul class="list-unstyled">
