--- a/public/team/index.html
+++ b/public/team/index.html
@@ -562,6 +562,7 @@
 </tbody>
 </table>
 <h1 id="former-research-students">Former research students</h1>
+<p><img src="janith_octave.jpeg" alt=""></p>
 <table>
 <thead>
 <tr>
