--- a/public/team/index.html
+++ b/public/team/index.html
@@ -580,7 +580,7 @@
 </tr>
 <tr>
 <td style="text-align:center"><a href="https://darecentre.org.au/portfolio_page/samudra-madushani/">Samudra Madhushani</a><img src="samudra.png" alt=""></td>
-<td style="text-align:left"><strong>Thesis title:</strong>  <a href="https://samudramadushani.github.io/HierarchicalForecasting/SlidesCodingR.html#1">Hierarchical Forecasting of Dengue Incidence in Sri Lanka</a> <strong>Degree:</strong> MSc in Applied Mathematics - 2021 <strong>Current position:</strong> PhD Candidate, University of New South Wales, AUstralia **Awards:**Fully funded PhD Scholarship from <a href="https://darecentre.org.au/">DARE</a> and NSW</td>
+<td style="text-align:left"><strong>Thesis title:</strong>  <a href="https://samudramadushani.github.io/HierarchicalForecasting/SlidesCodingR.html#1">Hierarchical Forecasting of Dengue Incidence in Sri Lanka</a> <strong>Degree:</strong> MSc in Applied Mathematics - 2021 <strong>Current position:</strong> PhD Candidate, University of New South Wales, AUstralia <strong>Awards:</strong> Fully funded PhD Scholarship from <a href="https://darecentre.org.au/">DARE</a> and NSW</td>
 </tr>
 </tbody>
 </table>
