--- a/public/team/index.html
+++ b/public/team/index.html
@@ -594,7 +594,7 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center"><a href="https://www.linkedin.com/in/randi-shashikala-b885351b8/">Randi Shashikala</a> <img src="randi.jpg" alt=""></td>
+<td style="text-align:center"><a href="https://www.linkedin.com/in/randi-shashikala-b885351b8/">Randi Shashikala</a> <img src="/img/randi.jpg" alt=""></td>
 <td style="text-align:left"><strong>Research project:</strong> <a href="https://thiyangt.github.io/coviddashboard/">Interactive Dashboard to Monitor the COVID-19 Outbreak and Vaccine Administration</a> <strong>Degree:</strong> BSc (Hons) Statistics - 2022 <strong>Current Position:</strong> Analyst, Actuarial and Analytics Team, Fairfirst Insurance</td>
 </tr>
 </tbody>
