added quarto blog post

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -548,11 +548,11 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center"><a href="https://www.linkedin.com/in/udeshi-salgado/?originalSubdomain=lk">Udeshi Salgado</a>  <img src="udeshi.jpeg" alt=""></td>
+<td style="text-align:center"><a href="https://www.linkedin.com/in/udeshi-salgado/?originalSubdomain=lk">Udeshi Salgado</a>  <img src="img/udeshi.jpeg" alt=""></td>
 <td style="text-align:left"><strong>Thesis title:</strong> Deep learning for dental caries detection <strong>Degree:</strong> BSc (Hons) Statistics - Reading</td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="https://www.linkedin.com/in/lakna-perera/?trk=public_profile_browsemap&amp;originalSubdomain=lk">Lakna Perera</a>  <img src="lakna.jpeg" alt=""></td>
+<td style="text-align:center"><a href="https://www.linkedin.com/in/lakna-perera/?trk=public_profile_browsemap&amp;originalSubdomain=lk">Lakna Perera</a>  <img src="img/lakna.jpeg" alt=""></td>
 <td style="text-align:left"><strong>Thesis title:</strong> Spatio-temporal forecasting of rainfall in Sri Lanka  <strong>Degree:</strong> BSc (Hons) Statistics - Reading</td>
 </tr>
 <tr>
@@ -571,15 +571,15 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center"><a href="https://janithwanni.netlify.app/"> Janith Wanniarachchi</a> <img src="janith.jpg" alt=""></td>
+<td style="text-align:center"><a href="https://janithwanni.netlify.app/"> Janith Wanniarachchi</a> <img src="img/janith.jpg" alt=""></td>
 <td style="text-align:left"><strong>Thesis title:</strong> Transparency, auditability and explainability of interpretable machine learning methods <strong>Degree:</strong> BSc (Hons) Statistics - 2022 <strong>Current position:</strong> R Shiny Developer at <a href="https://appsilon.com/">Appsilon</a> <strong>Awards:</strong> SLAAS Physical Science Award Winner - 2022</td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="https://jayanilakshika.netlify.app/"> Jayani Lakshika</a> <img src="jayani.png" alt=""></td>
+<td style="text-align:center"><a href="https://jayanilakshika.netlify.app/"> Jayani Lakshika</a> <img src="img/jayani.png" alt=""></td>
 <td style="text-align:left"><strong>Thesis title:</strong> Computer vision system for automatic Sri Lankan medicinal plant identification <strong>Degree:</strong> BSc (Hons) Statistics - 2021 <strong>Current position:</strong> PhD Candidate, Monash University, Australia <strong>Awards</strong> Fully funded Monash University PhD Scholarship</td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="https://darecentre.org.au/portfolio_page/samudra-madushani/">Samudra Madhushani</a><img src="samudra.png" alt=""></td>
+<td style="text-align:center"><a href="https://darecentre.org.au/portfolio_page/samudra-madushani/">Samudra Madhushani</a><img src="img/samudra.png" alt=""></td>
 <td style="text-align:left"><strong>Thesis title:</strong>  <a href="https://samudramadushani.github.io/HierarchicalForecasting/SlidesCodingR.html#1">Hierarchical Forecasting of Dengue Incidence in Sri Lanka</a> <strong>Degree:</strong> MSc in Applied Mathematics - 2021 <strong>Current position:</strong> PhD Candidate, University of New South Wales, AUstralia <strong>Awards:</strong> Fully funded PhD Scholarship from <a href="https://darecentre.org.au/">DARE</a> and NSW</td>
 </tr>
 </tbody>
@@ -594,7 +594,7 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center"><a href="https://www.linkedin.com/in/randi-shashikala-b885351b8/">Randi Shashikala</a> <img src="/img/randi.jpg" alt=""></td>
+<td style="text-align:center"><a href="https://www.linkedin.com/in/randi-shashikala-b885351b8/">Randi Shashikala</a> <img src="img/randi.jpg" alt=""></td>
 <td style="text-align:left"><strong>Research project:</strong> <a href="https://thiyangt.github.io/coviddashboard/">Interactive Dashboard to Monitor the COVID-19 Outbreak and Vaccine Administration</a> <strong>Degree:</strong> BSc (Hons) Statistics - 2022 <strong>Current Position:</strong> Analyst, Actuarial and Analytics Team, Fairfirst Insurance</td>
 </tr>
 </tbody>
