--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -591,7 +591,7 @@
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
 <li>
-<p><a href="https://smart-doe.netlify.app/">STA 225 2.0 Design and Analysis of Experiments</a></p>
+<p><a href="https://thiyanga-doe.netlify.app/">STA 225 2.0 Design and Analysis of Experiments</a></p>
 </li>
 <li>
 <p><a href="https://stochasticprocesses.netlify.app/">STA 331 2.0 Stochastic Processes</a></p>
