--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -573,7 +573,7 @@
 <hr>
 <h1 id="2022">2022</h1>
 <h2 id="semester-2">Semester 2</h2>
-<p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
+<p><strong>BSc (Hons) Statistics, Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</strong></p>
 <ul>
 <li>
 <p><a href="https://stochasticprocesses.netlify.app/">STA 331 2.0 Stochastic Processes</a></p>
@@ -582,11 +582,11 @@
 <p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a> | <a href="https://thiyanga-statisticalconsultancy.netlify.app/">Course information</a></p>
 </li>
 </ul>
-<p>MSc in Applied Statistics</p>
+<p><strong>MSc in Applied Statistics</strong></p>
 <ul>
 <li><a href="https://hellor.netlify.app/mscschedule/">STA 517 3.0 Programming and Statistical Computing with R</a> - Batch 3</li>
 </ul>
-<p>MSc in Data Science and Artificial Intelligence</p>
+<p><strong>MSc in Data Science and Artificial Intelligence</strong></p>
 <p>The MSc in DS and AI at USJ was designed in partnership with the <a href="https://dsai-project.eu/site/">Erasmus+ DS and AI consortium</a>, a group of 15 European and Asian organizations with the mission of bringing European-standard advanced education to Asia</p>
 <ul>
 <li>
