--- a/public/project/dengue/index.html
+++ b/public/project/dengue/index.html
@@ -665,7 +665,7 @@
 
 <div class="btn-links mb-3">
   
-  <a class="btn btn-outline-primary my-1" href="https://github.com/thiyangt/colmozzie" target="_blank" rel="noopener">Go to Project Site</a>
+  <a class="btn btn-outline-primary my-1" href="https://denguedatahub.netlify.app/" target="_blank" rel="noopener">Go to Project Site</a>
   
   
 
