--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -571,6 +571,9 @@
 <h1 id="teaching-apps">Teaching Apps</h1>
 <p><a href="https://statisticsmart.shinyapps.io/SimpleLinearRegression/">Simple Linear Regression</a></p>
 <hr>
+<h1 id="2023">2023</h1>
+<p>Semester 1</p>
+<p><a href="https://thiyanga-dataviz.netlify.app/about/">STA 492 2.0/ ASP 460 2.0 Data Visualisation</a></p>
 <h1 id="2022">2022</h1>
 <h2 id="semester-2">Semester 2</h2>
 <p><strong>BSc (Hons) Statistics, Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</strong></p>
