--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -573,7 +573,17 @@
 <hr>
 <h1 id="2023">2023</h1>
 <p>Semester 1</p>
+<ul>
+<li>
+<p><a href="https://hellor2023.netlify.app/schedule/">STA 326 2.0 Programming and Data Analysis with R</a></p>
+</li>
+<li>
 <p><a href="https://thiyanga-dataviz.netlify.app/about/">STA 492 2.0/ ASP 460 2.0 Data Visualisation</a></p>
+</li>
+<li>
+<p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a> | <a href="https://thiyanga-statisticalconsultancy.netlify.app/">Course information</a></p>
+</li>
+</ul>
 <h1 id="2022">2022</h1>
 <h2 id="semester-2">Semester 2</h2>
 <p><strong>BSc (Hons) Statistics, Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</strong></p>
