--- a/public/index.html
+++ b/public/index.html
@@ -2386,7 +2386,7 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/post/posit/" >My `Posit::conf 2023` Experience - A Conference of Insights, Knowledge, Connections, and Explorations</a>
+      <a href="/post/posit/" >My Posit::conf 2023 Experience - A Conference of Insights, Knowledge, Connections, and Explorations</a>
     </h3>
 
     
@@ -2423,7 +2423,7 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
   
   <span class="middot-divider"></span>
   <span class="article-reading-time">
-    2 min read
+    3 min read
   </span>
   
 
