--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -571,14 +571,31 @@
 <h1 id="teaching-apps">Teaching Apps</h1>
 <p><a href="https://statisticsmart.shinyapps.io/SimpleLinearRegression/">Simple Linear Regression</a></p>
 <hr>
-<h1 id="2024">2024</h1>
+<h1 id="20242025">2024/2025</h1>
+<p><strong>MSc in Data Science and AI</strong></p>
+<p><a href="https://thiyangt.github.io/spatio-temporal/">DSA 554 3.0 Spatio-temporal Data Analysis</a></p>
+<p><strong>BSc (Hons) Statistics, Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</strong></p>
 <p>Semester 2</p>
 <ul>
-<li><a href="https://thiyangt.github.io/sp/">STA 331 2.0 Stochastic Processes</a></li>
+<li>
+<p><a href="https://thiyangt.github.io/sp/">STA 331 2.0 Stochastic Processes</a></p>
+</li>
+<li>
+<p><a href="https://thiyangt.github.io/EssentialSkillsInStatistics/">STA 315 2.0 Essential Skills in Statistics</a></p>
+</li>
 </ul>
+<h1 id="2024">2024</h1>
 <p>Semester 1</p>
 <ul>
-<li><a href="https://thiyangt.github.io/descriptivestatisticsweb/">STA 113 2.0 Descriptive Statistics</a></li>
+<li>
+<p><a href="https://thiyangt.github.io/descriptivestatisticsweb/">STA 113 2.0 Descriptive Statistics</a></p>
+</li>
+<li>
+<p><a href="https://thiyangt.github.io/rprogramming/">STA 326 2.0/ ASP 454 2.0/ CSC 381 2.0 Programming and Data Analysis with R</a></p>
+</li>
+<li>
+<p><a href="https://thiyangt.github.io/datavisualisation/">STA 492 2.0/ ASP 460 2.0 Data Visualisation</a></p>
+</li>
 </ul>
 <h1 id="2023">2023</h1>
 <p>Semester 2</p>
