--- a/public/index.html
+++ b/public/index.html
@@ -2386,7 +2386,7 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/post/owsd/" >How I Managed My Precious 180 Seconds at the OWSD Short Talk, Big Impact Competition and the Impact It Made</a>
+      <a href="/post/owsd/" >How I Managed My Precious 180 Seconds at the UNESCO-OWSD Short Talk, Big Impact Competition and the Impact It Made</a>
     </h3>
 
     
@@ -2423,7 +2423,7 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
   
   <span class="middot-divider"></span>
   <span class="article-reading-time">
-    4 min read
+    5 min read
   </span>
   
 
