--- a/public/index.html
+++ b/public/index.html
@@ -2386,7 +2386,7 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/post/blog/" >Recreating Nightingale&#39;s most famous diagram, known as the Coxcomb</a>
+      <a href="/post/feb112026/" >Recreating Nightingale&#39;s most famous diagram, known as the Coxcomb</a>
     </h3>
 
     
@@ -2435,7 +2435,7 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="/categories/ggplot2/">ggplot2</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="/categories/ggplot2/">ggplot2</a>, <a href="/categories/tidyverse/">tidyverse</a>, <a href="/categories/data-visualisation/">data visualisation</a></span>
   
 
 </div>
